--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
   "version": 2,
-  "name": "chefsocial-voice",
   "builds": [
     {
       "src": "api/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 30
+      }
     },
     {
       "src": "public/**/*",
@@ -110,11 +112,6 @@
       ]
     }
   ],
-  "functions": {
-    "api/index.js": {
-      "maxDuration": 30
-    }
-  },
   "env": {
     "NODE_ENV": "production"
   }
