--- a/vercel.json
+++ b/vercel.json
@@ -13,15 +13,15 @@
       "use": "@vercel/static"
     },
     {
-      "src": "dashboard/**/*.html",
+      "src": "dashboard/**/*",
       "use": "@vercel/static"
     },
     {
-      "src": "auth/**/*.html",
+      "src": "auth/**/*",
       "use": "@vercel/static"
     },
     {
-      "src": "apps/**/*.html",
+      "src": "apps/**/*",
       "use": "@vercel/static"
     }
   ],
@@ -33,6 +33,10 @@
     {
       "source": "/admin/(.*)",
       "destination": "/public/admin/$1"
+    },
+    {
+      "source": "/shared/(.*)",
+      "destination": "/dashboard/shared/$1"
     },
     {
       "source": "/dashboard/(.*)",
@@ -49,6 +53,14 @@
     {
       "source": "/apps/(.*)",
       "destination": "/apps/$1"
+    },
+    {
+      "source": "/favicon.svg",
+      "destination": "/dashboard/favicon.svg"
+    },
+    {
+      "source": "/favicon.ico",
+      "destination": "/public/favicon.ico"
     },
     {
       "source": "/",
@@ -74,6 +86,45 @@
         {
           "key": "Strict-Transport-Security",
           "value": "max-age=31536000; includeSubDomains"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.css)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.js)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.svg)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "image/svg+xml"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     },
