--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,13 @@
       }
     },
     {
+      "src": "api/auth.js",
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 10
+      }
+    },
+    {
       "src": "public/**/*",
       "use": "@vercel/static"
     },
@@ -26,6 +33,10 @@
     }
   ],
   "rewrites": [
+    {
+      "source": "/api/auth/(.*)",
+      "destination": "/api/auth.js"
+    },
     {
       "source": "/api/(.*)",
       "destination": "/api/index.js"
