--- a/package.json
+++ b/package.json
@@ -1,52 +1,57 @@
 {
   "name": "chefsocial-voice",
   "version": "1.0.0",
+  "description": "ChefSocial AI-powered restaurant marketing platform with voice capabilities",
   "main": "src/server.js",
   "scripts": {
-    "start": "PORT=3004 node src/server.js",
-    "dev": "PORT=3004 nodemon src/server.js",
-    "dev:admin": "cd admin-panel && PORT=3005 npm run dev",
-    "dev:marketing": "cd marketing-site && python3 -m http.server 3006",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "jest",
+    "build": "npm run build:admin",
     "build:admin": "cd admin-panel && npm run build",
-    "deploy:admin": "./deploy-admin.sh",
-    "deploy:marketing": "cd marketing-site && vercel --prod",
-    "deploy:all": "npm run deploy:admin && vercel --prod",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "echo \"No linter configured\"",
-    "typecheck": "echo \"No TypeScript configured\""
+    "deploy": "vercel --prod",
+    "lint": "eslint src/ --ext .js",
+    "format": "prettier --write src/"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "ChefSocial Voice AI platform for restaurant social media content",
+  "keywords": [
+    "restaurant",
+    "ai",
+    "voice",
+    "marketing",
+    "social-media",
+    "automation"
+  ],
+  "author": "ChefSocial Team",
+  "license": "MIT",
   "dependencies": {
-    "@sentry/node": "^9.30.0",
-    "bcryptjs": "^3.0.2",
-    "bull": "^4.16.5",
-    "compression": "^1.8.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.17.1",
-    "express-rate-limit": "^7.5.0",
-    "express-session": "^1.18.1",
-    "express-validator": "^7.2.1",
-    "form-data": "^4.0.3",
-    "helmet": "^8.1.0",
-    "ioredis": "^5.6.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "livekit-server-sdk": "^2.13.0",
-    "multer": "^2.0.1",
-    "openai": "^5.3.0",
-    "prom-client": "^15.1.3",
-    "redis": "^5.5.6",
     "sqlite3": "^5.1.7",
-    "stripe": "^18.2.1",
-    "twilio": "^5.7.1",
-    "uuid": "^11.1.0",
-    "winston": "^3.17.0",
-    "ws": "^8.18.2"
+    "stripe": "^17.3.1",
+    "twilio": "^5.4.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
-  }
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chefsocial/chefsocial-voice.git"
+  },
+  "bugs": {
+    "url": "https://github.com/chefsocial/chefsocial-voice/issues"
+  },
+  "homepage": "https://chefsocial-voice.vercel.app"
 }
