--- a/vercel.json
+++ b/vercel.json
@@ -83,11 +83,24 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css))",
+      "source": "/(.*)\\.js",
       "headers": [
         {
           "key": "Content-Type",
           "value": "text/javascript; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)\\.css",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css; charset=utf-8"
         },
         {
           "key": "Cache-Control",
