Fix /auth route to properly serve login page instead of homepage

--- a/vercel.json
+++ b/vercel.json
@@ -64,6 +64,10 @@
       "destination": "/auth/login.html"
     },
     {
+      "source": "/auth",
+      "destination": "/auth/login.html"
+    },
+    {
       "source": "/auth/(.*)",
       "destination": "/auth/$1"
     },
