--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev -p 3004",
     "build": "next build",
     "start": "next start -p 3004",
-    "lint": "next lint"
+    "lint": "next lint",
+    "perf": "node scripts/performance-test.js",
+    "perf:simple": "node scripts/performance-test-simple.js",
+    "setup:admin": "node scripts/setup-admin.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "dependencies": {
     "@livekit/components-react": "^2.9.9",
@@ -22,24 +29,36 @@
     "livekit-client": "^2.13.5",
     "livekit-server-sdk": "^2.13.0",
     "next": "14.2.5",
+    "openai": "^5.5.1",
+    "pg": "^8.16.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sqlite3": "^5.1.6",
     "stripe": "^18.2.1",
     "twilio": "^5.7.1",
     "uuid": "^9.0.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
+    "@types/pg": "^8.15.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/supertest": "^6.0.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "postcss": "^8.4.39",
+    "supertest": "^6.3.4",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.5.3"
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.5.3",
+    "wavefile": "^11.0.0"
   }
 }
